<resources>
    <string name="app_name">GradGo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">save</string>
    <string name="graduation">graduation</string>
    <string name="company">company</string>
    <string name="profession">profession</string>
    <string name="name">name</string>
</resources>